<resources>
    <string name="app_name">QFoodly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_add_product">Add a new product</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_product_details">Product Details</string>


    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="import_export_title">Data Settings</string>
    <string name="export_products_csv">Export Products to CSV</string>
    <string name="import_products_csv">Import Products from CSV</string>
    <string name="export_products_json">Export Products to JSON</string>
    <string name="import_products_json">Import Products from JSON</string>

    <!-- Import/Export Messages -->
    <string name="export_success">Products exported successfully to %s</string>
    <string name="export_failed">Failed to export products: %s</string>
    <string name="import_success">Products imported successfully. Processed: %d, Skipped: %d</string>
    <string name="import_failed">Failed to import products: %s</string>
    <string name="file_not_found">File not found</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_products_to_export">No products to export</string>

    <!-- Icon descriptions -->
    <string name="export_icon">Export icon</string>
    <string name="import_icon">Import icon</string>
    <string name="navigate_icon">Navigate icon</string>
</resources>