<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_food_bank_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_recycling_black_24dp"
            android:title="@string/menu_deposit" />
        <item
            android:id="@+id/nav_spacer"
            android:enabled="false" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_bar_chart_black_24dp"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>