<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.qfoodly.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_deposit"
            app:destination="@id/nav_deposit" />
        <action
            android:id="@+id/action_nav_home_to_nav_stats"
            app:destination="@id/nav_stats" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_add_product"
            app:destination="@id/nav_add_product" />
        <action
            android:id="@+id/action_nav_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.qfoodly.ui.detail.ProductDetailFragment"
        android:label="@string/menu_product_details"
        tools:layout="@layout/fragment_product_detail">

        <argument
            android:name="product"
            app:argType="com.example.qfoodly.data.Product" />

    </fragment>


    <fragment
        android:id="@+id/nav_deposit"
        android:name="com.example.qfoodly.ui.deposit.DepositFragment"
        android:label="@string/menu_deposit"
        tools:layout="@layout/fragment_deposit" >
        <action
            android:id="@+id/action_nav_deposit_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_deposit_to_nav_stats"
            app:destination="@id/nav_stats" />
        <action
            android:id="@+id/action_nav_deposit_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.qfoodly.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" >
        <action
            android:id="@+id/action_nav_stats_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_stats_to_nav_deposit"
            app:destination="@id/nav_deposit" />
        <action
            android:id="@+id/action_nav_stats_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.qfoodly.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_settings_to_nav_deposit"
            app:destination="@id/nav_deposit" />
        <action
            android:id="@+id/action_nav_settings_to_nav_stats"
            app:destination="@id/nav_stats" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.qfoodly.ui.addproduct.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_nav_add_product_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>